Allow canceling in progress orchestrations
