# components/kyma-environment-broker/common/orchestration/dto.go
@@ -13,6 +13,22 @@ type Parameters struct {
 	DryRun   bool         `json:"dryRun,omitempty"`
 }
 
+// Orchestration holds all information about an orchestration.
+// Orchestration performs operations of a specific type (UpgradeKymaOperation, UpgradeClusterOperation)
+// on specific targets of SKRs.
+type Orchestration struct {
+	OrchestrationID string
+	State           string
+	Description     string
+	CreatedAt       time.Time
+	UpdatedAt       time.Time
+	Parameters      Parameters
+}
+
+func (o *Orchestration) IsFinished() bool {
+	return o.State == Succeeded || o.State == Failed
+}
+
 const (
 	// StateParam parameter used in list orchestrations / operations queries to filter by state
 	StateParam = "state"
@@ -24,6 +40,7 @@ const (
 	InProgress = "in progress"
 	Succeeded  = "succeeded"
 	Failed     = "failed"
+	Canceled   = "canceled"
 )
 
 // ListParameters hold attributes of list orchestrations / operations queries.
