# components/kyma-environment-broker/internal/orchestration/handlers/orchestration_handler.go
@@ -1,0 +1,208 @@
+package handlers
+
+import (
+	"net/http"
+
+	"github.com/kyma-project/control-plane/components/kyma-environment-broker/common/pagination"
+
+	"github.com/kyma-project/control-plane/components/kyma-environment-broker/internal/httputil"
+
+	"github.com/kyma-project/control-plane/components/kyma-environment-broker/internal/storage"
+	"github.com/kyma-project/control-plane/components/kyma-environment-broker/internal/storage/dberr"
+	"github.com/kyma-project/control-plane/components/kyma-environment-broker/internal/storage/dbsession/dbmodel"
+
+	"github.com/gorilla/mux"
+	commonOrchestration "github.com/kyma-project/control-plane/components/kyma-environment-broker/common/orchestration"
+	"github.com/pkg/errors"
+	"github.com/sirupsen/logrus"
+)
+
+type orchestrationHandler struct {
+	orchestrations storage.Orchestrations
+	operations     storage.Operations
+	runtimeStates  storage.RuntimeStates
+
+	converter Converter
+	log       logrus.FieldLogger
+
+	canceler *Canceler
+
+	defaultMaxPage int
+}
+
+// NewOrchstrationStatusHandler exposes data about orchestrations and allows to manage them
+func NewOrchstrationStatusHandler(operations storage.Operations, orchestrations storage.Orchestrations, runtimeStates storage.RuntimeStates, defaultMaxPage int, log logrus.FieldLogger) *orchestrationHandler {
+	return &orchestrationHandler{
+		operations:     operations,
+		orchestrations: orchestrations,
+		runtimeStates:  runtimeStates,
+		log:            log,
+		defaultMaxPage: defaultMaxPage,
+		converter:      Converter{},
+		canceler:       NewCanceler(operations, orchestrations, log),
+	}
+}
+
+func (h *orchestrationHandler) AttachRoutes(router *mux.Router) {
+	router.HandleFunc("/orchestrations", h.listOrchestration).Methods(http.MethodGet)
+	router.HandleFunc("/orchestrations", h.cancelOrchestration).Methods(http.MethodDelete)
+	router.HandleFunc("/orchestrations/{orchestration_id}", h.getOrchestration).Methods(http.MethodGet)
+	router.HandleFunc("/orchestrations/{orchestration_id}", h.cancelOrchestrationByID).Methods(http.MethodDelete)
+	router.HandleFunc("/orchestrations/{orchestration_id}/operations", h.listOperations).Methods(http.MethodGet)
+	router.HandleFunc("/orchestrations/{orchestration_id}/operations/{operation_id}", h.getOperation).Methods(http.MethodGet)
+}
+
+func (h *orchestrationHandler) getOrchestration(w http.ResponseWriter, r *http.Request) {
+	orchestrationID := mux.Vars(r)["orchestration_id"]
+
+	o, err := h.orchestrations.GetByID(orchestrationID)
+	if err != nil {
+		h.log.Errorf("while getting orchestration %s: %v", orchestrationID, err)
+		httputil.WriteErrorResponse(w, h.resolveErrorStatus(err), errors.Wrapf(err, "while getting orchestration %s", orchestrationID))
+		return
+	}
+
+	response, err := h.converter.OrchestrationToDTO(o)
+	if err != nil {
+		h.log.Errorf("while converting orchestration: %v", err)
+		httputil.WriteErrorResponse(w, http.StatusInternalServerError, errors.Wrapf(err, "while converting orchestration"))
+		return
+	}
+
+	httputil.WriteResponse(w, http.StatusOK, response)
+}
+
+func (h *orchestrationHandler) cancelOrchestration(w http.ResponseWriter, r *http.Request) {
+	id, err := h.canceler.Cancel()
+	if err != nil {
+		h.log.Errorf("while canceling orchestration: %v", err)
+		httputil.WriteErrorResponse(w, h.resolveErrorStatus(err), errors.Wrapf(err, "while canceling orchestration"))
+		return
+	}
+	response := commonOrchestration.UpgradeResponse{OrchestrationID: id}
+
+	httputil.WriteResponse(w, http.StatusOK, response)
+}
+
+func (h *orchestrationHandler) cancelOrchestrationByID(w http.ResponseWriter, r *http.Request) {
+	orchestrationID := mux.Vars(r)["orchestration_id"]
+
+	err := h.canceler.CancelForID(orchestrationID)
+	if err != nil {
+		h.log.Errorf("while canceling orchestration %s: %v", orchestrationID, err)
+		httputil.WriteErrorResponse(w, h.resolveErrorStatus(err), errors.Wrapf(err, "while canceling orchestration %s", orchestrationID))
+		return
+	}
+
+	response := commonOrchestration.UpgradeResponse{OrchestrationID: orchestrationID}
+
+	httputil.WriteResponse(w, http.StatusOK, response)
+}
+
+func (h *orchestrationHandler) listOrchestration(w http.ResponseWriter, r *http.Request) {
+	pageSize, page, err := pagination.ExtractPaginationConfigFromRequest(r, h.defaultMaxPage)
+	if err != nil {
+		httputil.WriteErrorResponse(w, http.StatusBadRequest, errors.Wrap(err, "while getting query parameters"))
+		return
+	}
+	query := r.URL.Query()
+	filter := dbmodel.OrchestrationFilter{
+		Page:     page,
+		PageSize: pageSize,
+		// For optional filters, zero value (nil) is ok if not supplied
+		States: query[commonOrchestration.StateParam],
+	}
+
+	orchestrations, count, totalCount, err := h.orchestrations.List(filter)
+	if err != nil {
+		h.log.Errorf("while getting orchestrations: %v", err)
+		httputil.WriteErrorResponse(w, http.StatusInternalServerError, errors.Wrapf(err, "while getting orchestrations"))
+		return
+	}
+
+	response, err := h.converter.OrchestrationListToDTO(orchestrations, count, totalCount)
+	if err != nil {
+		h.log.Errorf("while converting orchestrations: %v", err)
+		httputil.WriteErrorResponse(w, http.StatusInternalServerError, errors.Wrapf(err, "while converting orchestrations"))
+		return
+	}
+
+	httputil.WriteResponse(w, http.StatusOK, response)
+}
+
+func (h *orchestrationHandler) listOperations(w http.ResponseWriter, r *http.Request) {
+	orchestrationID := mux.Vars(r)["orchestration_id"]
+	pageSize, page, err := pagination.ExtractPaginationConfigFromRequest(r, h.defaultMaxPage)
+	if err != nil {
+		httputil.WriteErrorResponse(w, http.StatusBadRequest, errors.Wrap(err, "while getting query parameters"))
+		return
+	}
+	query := r.URL.Query()
+	filter := dbmodel.OperationFilter{
+		Page:     page,
+		PageSize: pageSize,
+		// For optional filters, zero value (nil) is ok if not supplied
+		States: query[commonOrchestration.StateParam],
+	}
+
+	operations, count, totalCount, err := h.operations.ListUpgradeKymaOperationsByOrchestrationID(orchestrationID, filter)
+	if err != nil {
+		h.log.Errorf("while getting operations: %v", err)
+		httputil.WriteErrorResponse(w, http.StatusInternalServerError, errors.Wrapf(err, "while getting operations"))
+		return
+	}
+
+	response, err := h.converter.UpgradeKymaOperationListToDTO(operations, count, totalCount)
+	if err != nil {
+		h.log.Errorf("while converting operations: %v", err)
+		httputil.WriteErrorResponse(w, http.StatusInternalServerError, errors.Wrapf(err, "while converting operations"))
+		return
+	}
+
+	httputil.WriteResponse(w, http.StatusOK, response)
+}
+
+func (h *orchestrationHandler) getOperation(w http.ResponseWriter, r *http.Request) {
+	operationID := mux.Vars(r)["operation_id"]
+
+	operation, err := h.operations.GetUpgradeKymaOperationByID(operationID)
+	if err != nil {
+		h.log.Errorf("while getting upgrade operation %s: %v", operationID, err)
+		httputil.WriteErrorResponse(w, h.resolveErrorStatus(err), errors.Wrapf(err, "while getting operation %s", operationID))
+		return
+	}
+	provisioningOp, err := h.operations.GetProvisioningOperationByInstanceID(operation.InstanceID)
+	if err != nil {
+		h.log.Errorf("while getting provisioning operation for instance %s: %v", operation.InstanceID, err)
+		httputil.WriteErrorResponse(w, h.resolveErrorStatus(err), errors.Wrapf(err, "while getting provisioning operation for instance %s", operation.InstanceID))
+		return
+	}
+	provisioningState, err := h.runtimeStates.GetByOperationID(provisioningOp.ID)
+	if err != nil {
+		h.log.Errorf("while getting runtime state for operation %s: %v", provisioningOp.ID, err)
+	}
+
+	upgradeState, err := h.runtimeStates.GetByOperationID(operationID)
+	if err != nil && !dberr.IsNotFound(err) {
+		h.log.Errorf("while getting runtime state for upgrade operation %s: %v", operationID, err)
+	}
+
+	response, err := h.converter.UpgradeKymaOperationToDetailDTO(*operation, upgradeState.KymaConfig, provisioningState.ClusterConfig)
+	if err != nil {
+		h.log.Errorf("while converting operation: %v", err)
+		httputil.WriteErrorResponse(w, http.StatusInternalServerError, errors.Wrapf(err, "while converting operation"))
+		return
+	}
+
+	httputil.WriteResponse(w, http.StatusOK, response)
+}
+
+func (h *orchestrationHandler) resolveErrorStatus(err error) int {
+	cause := errors.Cause(err)
+	switch {
+	case dberr.IsNotFound(cause):
+		return http.StatusNotFound
+	default:
+		return http.StatusInternalServerError
+	}
+}
